# gltest

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: glcxt.hpp  myshaders.hpp
src/: glcxt.cpp  main.cpp  myshaders.cpp
